--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 NODE_ENV = 'production'
 VUE_APP_ROUTERMODE=history
 VUE_APP_METHOD=post
-VUE_APP_HTTP_PREFIX = https://class.zegonetwork.com:19443
-VUE_APP_SDK_SERVER = wss://webliveroom{id}-api.zego.im/ws
+VUE_APP_HTTP_PREFIX = xxxxx
+VUE_APP_SDK_SERVER = xxxxx
