--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 NODE_ENV = 'development'
 VUE_APP_ROUTERMODE=history
 VUE_APP_METHOD=post
-VUE_APP_HTTP_PREFIX = https://class.zegonetwork.com:19443
-VUE_APP_SDK_SERVER = wss://webliveroom-test.zego.im/ws
+VUE_APP_HTTP_PREFIX = xxxxxx
+VUE_APP_SDK_SERVER = xxxxx
